--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
   <body>
     <div class="slide-container">
       <div class="slide">
-        <img src="./img-1.jpeg" class="slide-img" alt="image" />
+        <img src="./img-1.jpg" class="slide-img" alt="image" />
         <h1>1</h1>
       </div>
       <div class="slide">
+        <img src="./img-2.jpg" class="slide-img" alt="image" />
         <h1>2</h1>
       </div>
       <div class="slide">
+        <img src="./img-3.jpeg" class="slide-img" alt="image" />
         <h1>3</h1>
       </div>
       <div class="slide">
-        <img src="./person-1.jpeg" class="person-img" alt="image" />
-        <h4>Susan Doe</h4>
+        <img src="./img-4.jpeg" class="person-img" alt="image" />
+
         <h1>4</h1>
       </div>
     </div>
